--- a/Index.html
+++ b/Index.html
@@ -9,6 +9,13 @@
   </head>
   <body>
     <div id="board"></div>
+    <div class="keyContainer">
+
+      <div class="keys" id="key1">&#8592</div>
+      <div class="keys" id="key2">&#8593</div>
+      <div class="keys" id="key3">&#8594</div>
+      <div class="keys" id="key4">&#8595</div>
+    </div>
     <div id="scoreBoard">Score : 0</div>
   </body>
 </html>
